--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<!-- <app-signin></app-signin> -->
+  <!-- <app-signup></app-signup> -->
 
-  <app-signup></app-signup>
-
- 
-
-
+ <!-- <app-name-editor></app-name-editor> -->
+<app-header></app-header>
+<!-- <app-signin></app-signin> -->
 <router-outlet></router-outlet>
