--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <!-- <app-signin></app-signin> -->
   <!-- <app-signup></app-signup> -->
 
- <!-- <app-name-editor></app-name-editor> -->
-<app-header></app-header>
+ <app-name-editor></app-name-editor>
+<!-- <app-header></app-header> -->
 <!-- <app-signin></app-signin> -->
+<!-- <md-checkbox>Done</md-checkbox> -->
 <router-outlet></router-outlet>
