--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-signin></app-signin> -->
   <!-- <app-signup></app-signup> -->
+  <!-- <div class="head"> -->
+    <app-header></app-header>
+  <!-- </div> -->
+ <!-- <app-name-editor></app-name-editor> -->
 
- <app-name-editor></app-name-editor>
-<!-- <app-header></app-header> -->
 <!-- <app-signin></app-signin> -->
-<!-- <md-checkbox>Done</md-checkbox> -->
-<router-outlet></router-outlet>
+<!-- <div class="route"> -->
+  <router-outlet></router-outlet>
+<!-- </div> -->
