--- a/src/app/header-exp/header-exp.component.css
+++ b/src/app/header-exp/header-exp.component.css
@@ -48,11 +48,11 @@
   }
         
   #content {
-    margin-left: 230px; /* Same as 'nav' width */
+    margin-left: 230px; 
   }
   
   .innertube {
-    margin: 15px; /* Padding for content */
+    margin: 15px; 
     margin-top: 0;
   }
   
