--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,20 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a href="#" class="navbar-brand" id="log">
     Proper</a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-header" aria-controls="menu-header" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="menu-header">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a href="#" class="nav-link">Home <span class="sr-only">(current)</span></a>
+        <a href="#" class="nav-link" >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Menu</a>
+        <a class="nav-link" routerLink="/login">Login</a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Subject
         </a>
@@ -25,15 +25,18 @@
           <div class="dropdown-divider"></div>
           <a href="#" class="dropdown-item">JAVA</a>
         </div>
-      </li>
+      </li> -->
+      <!-- <li class="nav-item">
+        <a class="nav-link" href="#" >About</a>
+      </li> -->
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" routerLink="/signup">Signup</a>
       </li>
-      <li class="nav-item">
-          <button type="button" class="btn btn-default" (click)="increasClick()">
+      <!-- <li class="nav-item">
+          <button type="button" class="btn btn-dark" (click)="increasClick()">
               Notifications <span class="badge badge-light bg-success">{{time}}</span>
             </button>
-      </li>
+      </li> -->
     </ul>
 
     <form class="form-inline my-2 my-lg-0">
@@ -44,6 +47,4 @@
 </nav>
 <!--For modern browsers-->
 
-<i class="material-icons">
-  bookmarks
-  </i>
+
