--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,29 +1,65 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Sign up</title>
-</head>
-<body>
-  <form action="" id="signup-form">
-    <div class="shadow-lg p-3 mb-5 bg-white rounded" id="signup">
-      <h2 id="signup-top-name">Sign Up</h2><br>
-      <hr>
+<div class="shadow-lg p-3 mb-5 bg-white rounded form">
+  <form class="signup-form">
+    <h2>
+      Sign Up
+    </h2>
+    <p>
+      Please fill in this form to create new account
+    </p>
+    <hr>
+    <mat-form-field class="signup">
+      <input type="text" ngModel name="firstname" matInput placeholder="First Name" value="" required>
 
-        <label for="name" class="signup-label">Name</label>
-        <input type="text" id="signup-name" class="form-control form-control-sm" placeholder="Full Name.."  minlength="8" required title="minimum 8 character required">
-        <br>
+      <mat-error>
+        The first name is required.
+      </mat-error>
+    </mat-form-field>
 
-        <label for="email" class="signup-label">Email</label>
-        <input type="email" id="signup-email" class="form-control form-control-sm" placeholder="Email.." required>
-        <br>
+    <mat-form-field class="signup">
+      <input type="text" ngModel name="lastname" matInput placeholder="Last Name" value="" required>
 
-        <label for="password" class="signup-label">Password</label>
-        <input type="password" id="signup-pwd" class="form-control form-control-sm" placeholder="Password" title="Password must be 8 characters including 1 uppercase letter, 1 lowercase letter and numeric characters" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
-        <br>
+      <mat-error>
+        The last name is required.
+      </mat-error>
+    </mat-form-field>
 
-        <button type="submit" class="btn btn-primary" name="btn-submit" >Sign Up</button>
-    </div>
+    <mat-form-field class="signup">
+      <input type="text" ngModel name="email" matInput placeholder="Email" value="" required>
+      <span style="color: blue" matSuffix>abc@abc.com</span>
+      <mat-error>
+        The email is required.
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field class="signup">
+        <input type="password" ngModel name="password" matInput placeholder="Password" value="" required>
+  
+        <mat-error>
+          The password is required.
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="signup">
+          <input type="password" ngModel name="rpassword" matInput placeholder="Repeat Password" value="" required>
+    
+          <mat-error>
+            <!-- The email is required. -->
+            Fill repeat password
+          </mat-error>
+        </mat-form-field>
+
+        <br><br>
+        <mat-radio-group>
+          <p>Gender</p>
+          <mat-radio-button name="gender" value="male" [checked]="isChecked">Male</mat-radio-button><br>
+          <mat-radio-button name="gender" value="female">Female</mat-radio-button>
+        </mat-radio-group>
+        <br><br>
+        <mat-checkbox>
+          Remeber me
+        </mat-checkbox><br><br>
+        <!-- <p>We create an accountyou agree <a routerLink="/register" id="term">Terms & Privacy.</a></p> -->
+
+        <button type="submit" mat-raised-button >Submit</button>
   </form>
-
-</body>
-</html>
+</div>
